Sending new info

--- a/flask/flask-tutorial/flaskr/static/style.css
+++ b/flask/flask-tutorial/flaskr/static/style.css
@@ -1,5 +1,5 @@
-html { font-family: sans-serif; background: #eee; padding: 1rem; }
-body { max-width: 960px; margin: 0 auto; background: white; }
+html { font-family: cursive; background: #eee; padding: 1rem; }
+body { max-width: 1000px; margin: 0 auto; background: yellow; }
 h1 { font-family: serif; color: #377ba8; margin: 1rem 0; }
 a { color: #377ba8; }
 hr { border: none; border-top: 1px solid lightgray; }
@@ -25,8 +25,3 @@ nav ul li a, nav ul li span, header .action { display: block; padding: 0.5rem; }
 input.danger { color: #cc2f2e; }
 input[type=submit] { align-self: start; min-width: 10em; }
 
-
-/*
-llamamos archivos estaticos a por ejemplo los archivos
-css o a los archivos index (los que forman la interfaz general
-	de la pagina en html)*/
