--- a/flask/flask-tutorial/flaskr/templates/register.html
+++ b/flask/flask-tutorial/flaskr/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Register{% endblock %}</h1>
+  <h1>{% block title %}Register: Interface used for creating your credentials{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
@@ -13,10 +13,3 @@
     <input type="submit" value="Register">
   </form>
 {% endblock %}
-
-
-<!-- 
-los block nombre
-sirven para anular todos los elementos con ese
-nombre que son del elemento padre
- -->
